--- a/src/app.html
+++ b/src/app.html
@@ -4,7 +4,6 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-		<title itemprop="name">BrzaGuza</title>
 		<meta name="application-name" content="BrzaGuza" />
 		<meta itemprop="name" content="BrzaGuza" />
 		<meta
@@ -23,18 +22,13 @@
 		<link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png" />
 		<link rel="icon" type="image/svg" sizes="64x64" href="/favicon/favicon.svg" />
 		<link rel="manifest" href="/favicon/site.webmanifest" />
-		<link rel="mask-icon" href="/favicon/safari-pinned-tab.svg" color="#5bbad5" />
+		<link rel="mask-icon" href="/favicon/safari-pinned-tab.svg" />
+
 		%sveltekit.head%
 	</head>
-	<body
-		data-sveltekit-preload-data="hover"
-		class="custom-bg dark:custom-bg flex min-h-screen flex-col"
-	>
+	<body data-sveltekit-preload-data="hover" class="body">
 		<div style="display: contents">%sveltekit.body%</div>
-		<!-- Footer section -->
-		<footer
-			class="custom-bg-headfoot dark:custom-bg-headfoot mt-auto flex h-20 w-full place-content-center items-center border border-gray-100 dark:border-0"
-		>
+		<footer class="footer">
 			<div>
 				<a
 					class="brzaguza-text-blue hover:brzaguza-text-pink"
