fix: source code url

--- a/src/app.html
+++ b/src/app.html
@@ -30,9 +30,7 @@
 		<div style="display: contents">%sveltekit.body%</div>
 		<footer class="footer">
 			<div>
-				<a
-					class="brzaguza-text-blue hover:brzaguza-text-pink"
-					href="https://github.com/tminaorg/brzaguza"
+				<a class="brzaguza-text-blue hover:brzaguza-text-pink" href="https://github.com/brzaguza"
 					><b>Source code</b></a
 				>
 			</div>
