chore: switch to hearchco

--- a/src/app.html
+++ b/src/app.html
@@ -4,18 +4,18 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-		<meta name="application-name" content="BrzaGuza" />
-		<meta itemprop="name" content="BrzaGuza" />
+		<meta name="application-name" content="Hearchco" />
+		<meta itemprop="name" content="Hearchco" />
 		<meta
 			name="description"
-			content="BrzaGuza is a private metasearch engine with speed and quality as the primary goals."
+			content="Hearchco is a private metasearch engine with speed and quality as the primary goals."
 		/>
 
 		<link
 			rel="search"
 			type="application/opensearchdescription+xml"
 			href="/opensearch.xml"
-			title="BrzaGuza"
+			title="Hearchco"
 		/>
 		<link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
 		<link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png" />
@@ -30,7 +30,7 @@
 		<div style="display: contents">%sveltekit.body%</div>
 		<footer class="footer">
 			<div>
-				<a class="brzaguza-text-blue hover:brzaguza-text-pink" href="https://github.com/brzaguza"
+				<a class="hearchco-text-blue hover:hearchco-text-pink" href="https://github.com/hearchco"
 					><b>Source code</b></a
 				>
 			</div>
