chore: logo change and removed await allowing for animation to run

--- a/src/app.html
+++ b/src/app.html
@@ -17,12 +17,13 @@
 			href="/opensearch.xml"
 			title="Hearchco"
 		/>
-		<link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
-		<link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png" />
-		<link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png" />
-		<link rel="icon" type="image/svg" sizes="64x64" href="/favicon/favicon.svg" />
-		<link rel="manifest" href="/favicon/site.webmanifest" />
-		<link rel="mask-icon" href="/favicon/safari-pinned-tab.svg" />
+		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+		<link rel="manifest" href="/site.webmanifest" />
+		<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
+		<meta name="msapplication-TileColor" content="#da532c" />
+		<meta name="theme-color" content="#ffffff" />
 
 		%sveltekit.head%
 	</head>
@@ -30,7 +31,7 @@
 		<div style="display: contents">%sveltekit.body%</div>
 		<footer class="footer">
 			<div>
-				<a class="hearchco-text-blue hover:hearchco-text-pink" href="https://github.com/hearchco"
+				<a class="hearchco-text-secondary hover:hearchco-text-primary" href="https://github.com/hearchco"
 					><b>Source code</b></a
 				>
 			</div>
