chore: forgot css on source code text

--- a/src/app.html
+++ b/src/app.html
@@ -31,7 +31,7 @@
 		<div style="display: contents">%sveltekit.body%</div>
 		<footer class="footer">
 			<div>
-				<a class="hearchco-text-secondary hover:hearchco-text-primary" href="https://github.com/hearchco"
+				<a class="hearchco-text-primary hover:underline" href="https://github.com/hearchco"
 					><b>Source code</b></a
 				>
 			</div>
