--- a/src/app.html
+++ b/src/app.html
@@ -8,7 +8,7 @@
 		<meta itemprop="name" content="Hearchco" />
 		<meta
 			name="description"
-			content="Hearchco is a private metasearch engine with speed and quality as the primary goals."
+			content="Hearchco is a distributed and fast metasearch engine that respects your privacy."
 		/>
 
 		<link
