fix: sveltekit conventions, moving stuff to components, etc.

--- a/src/app.html
+++ b/src/app.html
@@ -18,6 +18,7 @@
 			title="Hearchco"
 		/>
 		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+		<link rel="icon" type="image/svg" sizes="64x64" href="/favicon.svg" />
 		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
 		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
 		<link rel="manifest" href="/site.webmanifest" />
@@ -27,14 +28,10 @@
 
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover" class="body">
+	<body
+		data-sveltekit-preload-data="hover"
+		class="custom-bg dark:custom-bg min-h-screen flex flex-col"
+	>
 		<div style="display: contents">%sveltekit.body%</div>
-		<footer class="footer">
-			<div>
-				<a class="hearchco-text-primary hover:underline" href="https://github.com/hearchco"
-					><b>Source code</b></a
-				>
-			</div>
-		</footer>
 	</body>
 </html>
