fix: added makefile and switched to tailwind colors

--- a/src/app.html
+++ b/src/app.html
@@ -28,10 +28,7 @@
 
 		%sveltekit.head%
 	</head>
-	<body
-		data-sveltekit-preload-data="hover"
-		class="custom-bg dark:custom-bg min-h-screen flex flex-col"
-	>
+	<body data-sveltekit-preload-data="hover" class="dark:bg-zinc-900 min-h-screen flex flex-col">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
