feat!: started rewrite in Svelte 5 from scratch

--- a/src/app.html
+++ b/src/app.html
@@ -3,32 +3,30 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-
 		<meta name="application-name" content="Hearchco" />
 		<meta itemprop="name" content="Hearchco" />
 		<meta
 			name="description"
 			content="Hearchco is a distributed and fast metasearch engine that respects your privacy."
 		/>
-
 		<link
 			rel="search"
 			type="application/opensearchdescription+xml"
 			href="/opensearch.xml"
 			title="Hearchco"
 		/>
-		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-		<link rel="icon" type="image/svg" sizes="64x64" href="/favicon.svg" />
-		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-		<link rel="manifest" href="/site.webmanifest" />
-		<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#ffb581" />
+		<link rel="apple-touch-icon" sizes="180x180" href="%sveltekit.assets%/apple-touch-icon.png" />
+		<link rel="icon" type="image/svg" sizes="64x64" href="%sveltekit.assets%/favicon.svg" />
+		<link rel="icon" type="image/png" sizes="32x32" href="%sveltekit.assets%/favicon-32x32.png" />
+		<link rel="icon" type="image/png" sizes="16x16" href="%sveltekit.assets%/favicon-16x16.png" />
+		<link rel="manifest" href="%sveltekit.assets%/site.webmanifest" />
+		<link rel="mask-icon" href="%sveltekit.assets%/safari-pinned-tab.svg" color="#ffb581" />
 		<meta name="msapplication-TileColor" content="#da532c" />
 		<meta name="theme-color" content="#ffb581" />
-
+		<meta name="color-scheme" content="dark light" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover" class="dark:bg-zinc-900 min-h-screen flex flex-col">
+	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
