--- a/src/app.html
+++ b/src/app.html
@@ -26,7 +26,7 @@
 		<meta name="color-scheme" content="dark light" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover">
+	<body data-sveltekit-preload-data="hover" class="min-h-dvh dark:bg-neutral-900 dark:text-white">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
